--- a/Deployment.yml
+++ b/Deployment.yml
@@ -1,8 +1,14 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: anshumandevops
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sbwebappdeployment
+  namespace: anshumandevops
 spec:
   replicas: 2
   strategy:
@@ -22,7 +28,7 @@ spec:
     spec:
       containers:
         - name: sbwebappcontainer
-          image: ashokit/sb-logger-app
+          image: anshuman786/sb-logger-app
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -31,7 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sbappsvc
-  namespace: ashokitns
+  namespace: anshumandevops
 spec:
   type: LoadBalancer
   selector:
